--- a/app/src/main/res/layout/crop_field_list_card.xml
+++ b/app/src/main/res/layout/crop_field_list_card.xml
@@ -39,7 +39,7 @@
                         <TextView
                             android:id="@+id/txt_crop_field_card_name"
                             android:textSize="14dp"
-                            android:textColor="#000000"
+                            android:textColor="@color/colorPrimary"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
@@ -47,12 +47,13 @@
                             android:text="Field 1 " />
 
 
-
                         <TextView
                             android:id="@+id/txt_crop_field_card_area"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="( 15.5 ha )"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="clip_horizontal"
+                            android:layout_marginStart="200dp"
+                            android:text=" 15.5 ha "
                             android:textColor="#000000"
                             android:textSize="14dp" />
 
@@ -69,11 +70,9 @@
 
                     <ImageView
                         android:id="@+id/img_crop_fields_card_more"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:backgroundTint="@color/black"
-                        android:textColor="@color/darker_gray"
-                        app:srcCompat="@drawable/more_options_icon" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_chevron_right_24" />
 
 
                 </LinearLayout>
@@ -89,6 +88,13 @@
                     android:layout_height="match_parent"
                     android:padding="5dp"
                     android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="20dp"
+                        android:src="@drawable/ic_field"
+                        android:layout_gravity="start"/>
 
                     <LinearLayout
                         android:orientation="vertical"
@@ -115,8 +121,8 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-                                    android:text="Soil Category:"
-                                    android:textColor="#000000"
+                                    android:text="Field Type:"
+                                    android:textColor="@color/colorPrimary"
                                     android:textSize="14dp" />
 
                                 <TextView
@@ -151,8 +157,8 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-                                    android:text="Soil Type:"
-                                    android:textColor="#000000"
+                                    android:text="Status:"
+                                    android:textColor="@color/colorPrimary"
                                     android:textSize="14dp" />
 
                                 <TextView
@@ -184,7 +190,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:text="Croppable Area:"
-                                android:textColor="#000000"
+                                android:textColor="@color/colorPrimary"
                                 android:layout_weight="1"
                                 android:textSize="14dp" />
 
