--- a/app/src/main/res/layout-land/content_crop_inventory_list.xml
+++ b/app/src/main/res/layout-land/content_crop_inventory_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#F4F4F4"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropInventoryListActivity"
+    tools:context=".activities.farmrecords.CropInventoryListActivity"
     tools:showIn="@layout/activity_crop_inventory_list">
 
 
