--- a/app/src/main/res/layout-land/content_crop_inventory_seeds_manager.xml
+++ b/app/src/main/res/layout-land/content_crop_inventory_seeds_manager.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:padding="4dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropInventorySeedsManagerActivity"
+    tools:context=".activities.farmrecords.CropInventorySeedsManagerActivity"
     tools:showIn="@layout/activity_crop_inventory_seeds_manager">
     <ScrollView
         android:layout_width="match_parent"
