--- a/app/src/main/res/layout/content_crop_records_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_records_dashboard.xml
@@ -20,7 +20,7 @@
             android:id="@+id/mainView"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#344834"
+            android:background="@color/colorPrimary"
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <androidx.appcompat.widget.Toolbar
@@ -91,7 +91,6 @@
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
-
                             android:orientation="vertical"
                             android:paddingBottom="5dp">
 
@@ -99,7 +98,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:padding="20dp"
-                                android:src="@drawable/inventory"
+                                android:src="@drawable/ic_field"
                                 android:layout_gravity="center"/>
 
                             <TextView
@@ -136,7 +135,6 @@
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
-
                             android:orientation="vertical"
                             android:paddingBottom="5dp">
 
@@ -144,7 +142,7 @@
                                 android:layout_width="160dp"
                                 android:layout_height="90dp"
                                 android:padding="20dp"
-                                android:src="@drawable/crops"
+                                android:src="@drawable/ic_crop_records"
                                 android:layout_gravity="center"/>
 
                             <TextView
@@ -182,8 +180,6 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
                             android:layout_weight="1"
-
-
                             android:orientation="vertical"
                             android:paddingBottom="5dp">
 
@@ -191,7 +187,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="90dp"
                                 android:padding="20dp"
-                                android:src="@drawable/best_practices_second" />
+                                android:src="@drawable/ic_report" />
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -218,8 +214,6 @@
 
             </RelativeLayout>
         </ScrollView>
-
-
 
 
         <FrameLayout
@@ -263,8 +257,6 @@
 
 
         </FrameLayout>
-
-
 
     </RelativeLayout>
 
