--- a/app/src/main/res/layout/content_crop_yield_performance.xml
+++ b/app/src/main/res/layout/content_crop_yield_performance.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropYieldPerformanceActivity"
+    tools:context=".activities.predictiontools.CropYieldPerformanceActivity"
     tools:showIn="@layout/activity_crop_yield_performance">
 
     <HorizontalScrollView
