--- a/app/src/main/res/layout/wallet_content_loan_app_add_amount.xml
+++ b/app/src/main/res/layout/wallet_content_loan_app_add_amount.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccentLight"
-    tools:context=".wallet.activities.WalletLoanAppInitiateActivity"
+    tools:context=".activities.wallet.WalletLoanAppInitiateActivity"
     tools:showIn="@layout/wallet_loan_app_add_amount">
 
     <LinearLayout
