refactor move Activities 2rigsht actrivity package

--- a/app/src/main/res/layout/content_crop_pdfview.xml
+++ b/app/src/main/res/layout/content_crop_pdfview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropPDFViewActivity"
+    tools:context=".activities.agronomy.CropPDFViewActivity"
     tools:showIn="@layout/activity_crop_pdfview">
 
     <TextView
