--- a/app/src/main/res/layout-land/activity_crops_manager.xml
+++ b/app/src/main/res/layout-land/activity_crops_manager.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="5dp"
     android:orientation="vertical"
-    tools:context=".activities.agronomy.CropsManagerActivity">
+    tools:context=".activities.farmrecords.CropsManagerActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
