--- a/app/src/main/res/layout/activity_crops_list.xml
+++ b/app/src/main/res/layout/activity_crops_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F4F4F4"
-    tools:context=".activities.agronomy.CropsListActivity">
+    tools:context=".activities.farmrecords.CropsListActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/mainView"
