--- a/app/src/main/res/layout/activity_crops_manager.xml
+++ b/app/src/main/res/layout/activity_crops_manager.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.agronomy.CropsManagerActivity">
+    tools:context=".activities.farmrecords.CropsManagerActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/mainView"
         android:layout_width="match_parent"
