--- a/app/src/main/res/layout/content_crop_best_practices_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_best_practices_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropBestPracticesDashboardActivity"
+    tools:context=".activities.agronomy.CropBestPracticesDashboardActivity"
     tools:showIn="@layout/activity_crop_best_practices_dashboard">
 
 
