--- a/app/src/main/res/layout/content_crop_estimate_manager.xml
+++ b/app/src/main/res/layout/content_crop_estimate_manager.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.predictiontools.CropEstimateManagerActivity"
+    tools:context=".activities.farmrecords.CropEstimateManagerActivity"
     tools:showIn="@layout/activity_crop_estimate_manager">
 
     <ScrollView
