--- a/app/src/main/res/layout/content_crop_estimates_list.xml
+++ b/app/src/main/res/layout/content_crop_estimates_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.predictiontools.CropEstimatesListActivity"
+    tools:context=".activities.farmrecords.CropEstimatesListActivity"
     tools:showIn="@layout/activity_crop_estimates_list"
     android:background="@color/light_gray">
     <androidx.recyclerview.widget.RecyclerView
