--- a/app/src/main/res/layout/activity_crop_inventory_list.xml
+++ b/app/src/main/res/layout/activity_crop_inventory_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activities.CropInventoryListActivity">
 
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,11 +17,28 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tvtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/label_store"
+                android:textColor="#fff"
+                android:textSize="18dp" />
+
+            </RelativeLayout>
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
+
     <include layout="@layout/content_crop_inventory_list" />
+
+
 
 
 
