--- a/app/src/main/res/layout/wallet_loanstatus_preview.xml
+++ b/app/src/main/res/layout/wallet_loanstatus_preview.xml
@@ -1,32 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.myfarmnow.myfarmcrop.fragments.wallet.WalletLoanStatusPreviw" >
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_home"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.wallet.LoanStatusPreviewActivity"
-    tools:showIn="@layout/wallet_loan_status_preview">
+    >
+
+
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dimen_30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:id="@+id/text_view_loan_status_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="28dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,7 +58,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Date : "
-                   
+
                     android:textSize="16sp" />
 
                 <TextView
@@ -47,7 +67,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="12/07/2019"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -55,8 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-               >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
@@ -64,7 +83,7 @@
 
                     android:layout_weight="0.5"
                     android:text="Loan Status : "
-                   
+
                     android:textSize="16sp" />
 
                 <TextView
@@ -73,7 +92,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Approved"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -89,7 +108,7 @@
 
                     android:layout_weight="0.5"
                     android:text="Amount : "
-                   
+
                     android:textSize="16sp" />
 
                 <TextView
@@ -98,7 +117,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="UGX 80,000"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -121,7 +140,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="8%"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -136,7 +155,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Duration :"
-                   
+
                     android:textSize="16sp" />
 
                 <TextView
@@ -145,7 +164,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="3 Weeks"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -161,7 +180,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Due Date :"
-                   
+
                     android:textSize="16sp" />
 
                 <TextView
@@ -170,7 +189,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="29/10/2020"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -178,15 +197,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Due Amount :"
-                   
+
                     android:textSize="16sp" />
 
                 <TextView
@@ -195,7 +213,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="UGX 96400"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -212,7 +230,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Total Payments :"
-                   
+
                     android:textSize="16sp" />
 
                 <TextView
@@ -221,9 +239,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="UGX 46,400"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/layout_loan_status_preview_fines"
                 android:layout_width="match_parent"
@@ -237,7 +256,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Fines :"
-                   
+
                     android:textSize="16sp" />
 
                 <TextView
@@ -246,7 +265,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="UGX 0"
-                   
+
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -261,10 +280,11 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:text="Photos"
-                    android:textStyle="bold"
                     android:textAlignment="center"
-                   
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/text_view_loan_status_edit_photos"
                     android:layout_width="0dp"
@@ -273,32 +293,39 @@
                     android:text="Edit"
 
                     android:textAlignment="center"
-                   
+
                     android:textSize="16sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/image_view_loan_status_preview_nid_front"
                     android:layout_width="130dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/add_default_image"/>
+                    android:src="@drawable/add_default_image" />
+
                 <ImageView
                     android:id="@+id/image_view_loan_status_preview_nid_back"
                     android:layout_width="130dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/add_default_image"/>
+                    android:src="@drawable/add_default_image" />
+
                 <ImageView
                     android:id="@+id/image_view_loan_status_preview_user_photo"
                     android:layout_width="130dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/add_default_image"/>
+                    android:src="@drawable/add_default_image" />
             </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+</layout>
