--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -106,5 +106,6 @@
     <color name="progressOrange">#ffb234</color>
     <color name="progressRed">#ff8b5a</color>
     <color name="palebrown">#F6F4ED</color>
+    <color name="black_overlay">#66000000</color>
 
 </resources>
